navbar fixed, scrollbar colour change

--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,14 @@ nav{
     background-color: black;
     justify-content: space-between;
     padding: 10px;
+    position: sticky; /*sticky navbar*/
+    top:0;
+    z-index: 99;
 }
 .navbars{
     display: flex;
     justify-content: center;
+
 }
 .navbars li{
     list-style-type: none;
@@ -67,6 +71,7 @@ footer a{
     text-align: center;
     padding: 30px;
 }
+/*scrollbar changes*/
 ::selection {
     background-color: grey;
   }
@@ -75,7 +80,7 @@ footer a{
         background-color: darkslategrey;
     }
     ::-webkit-scrollbar-thumb {
-        background-color: black;
+        background-color:#eb3750;
       }
 #home_about{
     background-color: white;
